[[Story 65]-2]-create API untuk check NO Meter ke DOKU
